# bookish-chainsaw

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  mypy.ini  requirements.txt  setup.cfg  setup.py
data/: .gitignore
scripts/: draw_ellipse.py  export.py  light_actual_data.py  light_check.py  light_check_realistic.py  light_qb_hit_metric.py
scripts/data_exploration/: basic_exploration.py  player_orientation.py  scouting_exploration.py
src/mmfl/: __init__.py  tracking.py
src/mmfl/feature/: __init__.py  orientation.py
src/mmfl/feature/light/: README.md  __init__.py  field.py  geometric_object.py  linear.py  player.py  quadratic.py  tools.py  utils.py
src/mmfl/preprocessing/: __init__.py  scouting.py
tests/mmfl/feature/: test_orientation.py
tests/mmfl/feature/light/: test_linear.py  test_player.py  test_quadratic.py  test_utils.py
tests/mmfl/feature/light/quadratic/: test_calc_intersection.py
visualization/: animation_tutorial.py  orientation_tutorial.py  passResult_play-time.py  subplot_animation_dummy.py  tracking_animation.py  tracking_qbhit_animation.py
