[metadata]
name = mmfl

[options]
package_dir =
    = src
packages=find:

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
install_requires =
    numpy >= 1.23.4
    pandas >= 1.5.1
    torch == 1.12.1
    torchvision == 0.13.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =

[options.extras_require]
# Add here developing requierements
dev =
    black >= 22.10.0
    isort >= 5.10.1
    flake8 >= 5.0.4
    mypy >= 0.982
    pre-commit >= 2.20.0
    pylint == 2.13.8
    pylint-google-style-guide-imports-enforcing >= 1.2.0

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
