[metadata]
name = mmfl

[options]
package_dir =
    = src
packages=find:

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
install_requires =
    dash >= 2.7.1
    numpy >= 1.23.4
    pandas >= 1.5.1
    shapely >= 2.0.0
    torch == 1.12.1
    torchvision == 0.13.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =

[options.extras_require]
# Add here developing requierements
dev =
    black >= 22.10.0
    isort >= 5.10.1
    flake8 >= 5.0.4
    mypy >= 0.982
    pre-commit >= 2.20.0
    pylint == 2.13.8
    pylint-google-style-guide-imports-enforcing >= 1.2.0

testing =
    pytest >= 7.2.0
    pytest-cov >= 4.0.0

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov mmfl --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
